--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,3 @@
-machine:
-  environment:
-    # GOROOT is not set by default
-    GOROOT: ""
-    GOPATH: "${HOME}/simplebank"
-    PATH: "${GOPATH}/bin:${PATH}"
-    BUILD_PATH: "${GOPATH}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}"
-
-override:
-  - mkdir -p ~/simplebank/src/github.com/${CIRCLE_PROJECT_USERNAME}
-  - ln -s ${HOME}/${CIRCLE_PROJECT_REPONAME} ${BUILD_PATH}
-
 defaults: &defaults
   docker:
     - image: circleci/golang
@@ -20,7 +8,7 @@ defaults: &defaults
         POSTGRES_USER: db_test_user
         POSTGRES_PASSWORD: db_test_password
         POSTGRES_DB: db_test_database
-  working_directory: $BUILD_PATH
+  working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
 
 version: 2
 jobs:
@@ -29,7 +17,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: $BUILD_PATH
+          at: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
       - restore_cache:
           keys:
             - go-mod-v4-{{ checksum "go.sum" }}
@@ -42,16 +30,13 @@ jobs:
             - "/go/pkg/mod"
       - persist_to_workspace:
           root: .
-          paths: []
+          paths: .
 
   unit-test:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: $BUILD_PATH
-      - run:
-          name: Waiting for Postgres to be ready
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+          at: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
       - run:
           name: Unit Tests
           command: |
