--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,18 @@
 # Postgres Live
 DB_HOST=db
-# DB_HOST=127.0.0.1                             # when running the app without docker
+DB_HOST_TEST=127.0.0.1                             # when running the app without docker
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
-DB_PORT=
+DB_PORT=5432
+DB_DRIVER=postgres
+
+DB_SOURCE=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=disable
+DB_SOURCE_TEST=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST_TEST}:${DB_PORT}/${DB_NAME}?sslmode=disable
 
 # Used by pgadmin service
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
+
+# on backend service
+SERVER_ADDRESS=0.0.0.0:8080
