✨ New Feature: Make a second database on docker to test the app

--- a/.docker/postgres/Dockerfile
+++ b/.docker/postgres/Dockerfile
@@ -1,3 +1,9 @@
-FROM postgres:latest
+FROM postgres:latest as development
+
+RUN usermod -u 1000 postgres
+
+CMD ["-p", "5433"]
+
+FROM postgres:latest as test
 
 RUN usermod -u 1000 postgres
