--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,20 @@
 # Postgres Live
 DB_HOST=db
-DB_HOST_TEST=127.0.0.1                             # when running the app without docker
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
-DB_PORT=5432
+DB_PORT=5433
 DB_DRIVER=postgres
 
 DB_SOURCE=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=disable
-DB_SOURCE_TEST=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST_TEST}:${DB_PORT}/${DB_NAME}?sslmode=disable
+
+# Postgres Database for tests, DO NOT CHANGE
+DB_USER_TEST=db_test_user
+DB_PASSWORD_TEST=db_test_password
+DB_NAME_TEST=db_test_database
+DB_HOST_TEST=127.0.0.1
+DB_PORT_TEST=5432
+
 
 # Used by pgadmin service
 PGADMIN_DEFAULT_EMAIL=
