--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,18 +53,15 @@ jobs:
       - run:
           name: "Install Coveralls and Cover 🚂"
           command: |
-            go get golang.org/x/tools/cmd/cover &&
-            go get github.com/mattn/goveralls
-      - run:
-          name: Create a temp directory for artifacts 📂
-          command: |
-            mkdir -p /tmp/artifacts
+            go get golang.org/x/tools/cmd/cover && go get github.com/mattn/goveralls
       - run:
           name: Unit Tests 🌏
           command: |
             ./test.sh -s
-      - store_artifacts:
-          path: /tmp/artifacts
+      - run:
+          name: "Publish Coverage to Coveralls.io 🖥️"
+          command: |
+            goveralls -coverprofile=coverage.txt -service semaphore -repotoken $COVERALLS_TOKEN
 
 workflows:
   version: 2
