--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,7 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Set up Go 1.x
+      - name: Set up Go 1.x 🐹
         uses: actions/setup-go@v2
         with:
           go-version: ^1.18
@@ -42,8 +42,9 @@ jobs:
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.14.1/migrate.linux-amd64.tar.gz | tar xvz
           sudo mv migrate.linux-amd64 /usr/bin/migrate
           which migrate
+
       - name: Run migrations 🏓
-        run: make migrate-up
+        run: migrate -source file://$(pwd)/db/migrations -database postgres://db_test_user:db_test_password@localhost:5432/db_test_database?sslmode=disable up
 
       - name: Test 🚂
         run: make test
