--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - 8080:8080
     restart: on-failure
     labels:
+      - "traefik.http.routers.account.entrypoints=websecure"
+      - "traefik.http.routers.account.tls=true"
+      - "traefik.http.routers.account.tls.certresolver=letsencrypt"
       - "traefik.enable=true"
       - "traefik.http.routers.account.rule=Host(`localhost`) && PathPrefix(`/api`)"
     volumes:
@@ -64,16 +67,31 @@ services:
     image: traefik:v2.0
     container_name: traefik-accounts-simplebank
     command:
-      - "--api.insecure=true"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
       - "--providers.docker"
-      - "--providers.docker.exposedByDefault=false"
+      - "--providers.docker.exposedByDefault=true"
+      - "--api"
+      - "--api.insecure=true"
+      - "--log.level=DEBUG"
     ports:
       # The HTTP port
       - "80:80"
+      - "443:443"
       # The Web UI (enabled by --api.insecure=true)
       - "8000:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    labels:
+      # Dashboard
+      - "traefik.http.routers.traefik.rule=Host(`localhost`)"
+      - "traefik.http.routers.traefik.service=api@internal"
+      - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.traefik.entrypoints=websecure"
+      - "traefik.http.routers.http-catchall.rule=hostregexp(`{host:.+}`)"
+      - "traefik.http.routers.http-catchall.entrypoints=web"
+      - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
     networks:
       - gin-app
 
