Fix: CircleCI ident path error and Makefile run only 1 migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
             - "/go/pkg/mod"
       - persist_to_workspace:
           root: .
-          paths: .
+          paths: ["."]
 
   unit-test:
     <<: *defaults
