--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,8 @@ PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
 
 # on backend service
-SERVER_ADDRESS=0.0.0.0:8080
+HTTP_SERVER_ADDRESS=0.0.0.0:8080
+GRPC_SERVER_ADDRESS=0.0.0.0:5454
 TOKEN_SYMMETRIC_KEY=
 ACCESS_TOKEN_DURATION=
 REFRESH_TOKEN_DURATION=
