--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ DB_DRIVER=postgres
 
 DB_SOURCE=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=disable
 
+MIGRATION_URL=file://db/migrations
+
 # Postgres Database for tests, DO NOT CHANGE
 DB_USER_TEST=db_test_user
 DB_PASSWORD_TEST=db_test_password
