--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,7 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Set up Go 1.x 🐹
+      - name: Set up Go 1.18 🐹
         uses: actions/setup-go@v2
         with:
           go-version: ^1.18
