--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,10 @@ PGADMIN_DEFAULT_PASSWORD=
 
 # on backend service
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
+GIN_SERVER_ADDRESS=0.0.0.0:9090
 GRPC_SERVER_ADDRESS=0.0.0.0:5454
 TOKEN_SYMMETRIC_KEY=
 ACCESS_TOKEN_DURATION=
 REFRESH_TOKEN_DURATION=
 ENVIRONMENT=development
-REDIS_HOST=0.0.0.0:6397
+REDIS_HOST=redis:6397
