--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,20 @@ services:
     depends_on:
       - db
       - db_test
+      - redis
       - reverse-proxy
+    networks:
+      - gin-app
+
+  redis:
+    image: redis:7-alpine
+    container_name: "redis-worker"
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
+    volumes: 
+      - .docker/redisData:/data
     networks:
       - gin-app
 
