--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,13 @@
-sonar.projectKey=golang-simplebank
+sonar.projectKey=Drack112_Golang-SimpleBank
+sonar.organization=drack112
+
+sonar.sources=.
+sonar.exclusions=**/*_test.go
+
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+
+sonar.go.coverage.reportPaths=coverage.out
+
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
