--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.exclusions=**/*_test.go
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 
+sonar.host.url=https://sonarcloud.io
 sonar.go.coverage.reportPaths=coverage.out
 
 sonar.projectVersion=1.0
