--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   app:
     container_name: gin-accounts-simplebank-prod
+    image: drack112/golang-simplebank:stable
     build: .
     ports:
       - 8080:8080
