--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -27,7 +27,7 @@ jobs:
         run: docker-compose -f docker-compose.yml build && docker-compose -f docker-compose.yml push
 
       - name: 🚀 Build and push production image
-        run: docker-compose -f docker-compose-prod.yml build && docker-compose -f docker-compose-prod.yml push
+        run: docker-compose -f docker-compose.prod.yml build && docker-compose -f docker-compose.prod.yml push
 
       - name: 🚀 Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
